# trajectory_tracking_control

./: CMakeLists.txt  README.md  package.xml  setup.py
.github/workflows/: action-noetic.yaml  action-ros-ci.yaml
action/: ExecuteTrajectoryTracking.action
config/: controller_parameters.yaml  linear_controller.yaml
docs/: package_UML.vpd
include/: controller.h
include/trajectory_tracking_control/: controller.h  controller.hpp  controller_const_traj.h  controller_const_trajectory.h  controller_const_trajectory.hpp  linear_control.hpp  lyapunov_control.hpp  model_predictive_control.hpp  pose_handler.h  pose_handler.hpp  trajectory_control.hpp  trajectory_control_ros.hpp  trajectory_generator.hpp
launch/: controller_server.launch  controller_test.launch  husky_navigation.launch  ref_states_server.launch
maps/: playpen_map_modified.pgm  playpen_map_modified.yaml
nodes/: reference_states_srv_server
src/: controller.cpp  controller_const_trajectory.cpp  controller_node.cpp  controller_test_node.cpp  linear_control.cpp  pose_handler.cpp  test_localization.cpp  test_node.cpp  trajectory_control.cpp  trajectory_control_node.cpp  trajectory_control_ros.cpp  trajectory_generator.cpp
src/trajectory_tracking_control/: __init__.py  reference_state.py
srv/: ComputeReferenceStates.srv
test/launch/: fake_client.launch  fake_client_const.launch
test/nodes/: controller_test  fake_action_client  fake_action_client_const  fake_client  fake_service_client
test/src/: controller_test.cpp
visualization_tools/: linear_controller.py  test_wrap2pi.py
